[package]
name = "redis-rust"
version = "0.1.0"
authors = ["tj"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] }
chrono = "0.4.38"
rand = "0.9.0-alpha.2"
itertools = "0.13.0"
hex = "0.4.3" # async networking
